--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,15 @@
 root = true
 
+[*]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+
 [*.{groovy,java,kt,xml}]
-indent_style = tab
+tab_width = 4
 indent_size = 4
-continuation_indent_size = 4
+indent_style = tab
+trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
