--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,7 @@ tab_width = 4
 indent_size = 4
 indent_style = tab
 trim_trailing_whitespace = true
+ij_java_continuation_indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
