--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 		<groovy-sandbox.version>1.19</groovy-sandbox.version>
 		<caffeine.version>2.9.3</caffeine.version>
 		<guava.version>32.1.3-jre</guava.version>
-		<spring-boot.version>2.7.18</spring-boot.version>
+		<spring-boot.version>2.0.0.RELEASE</spring-boot.version>
 		<!--============================ plugins version management ========================-->
 		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
 		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
