fix(1.0.x): 使用lua脚本实现setIfAbsent方法以更好地保证原子性

--- a/spring-boot-commons-util/pom.xml
+++ b/spring-boot-commons-util/pom.xml
@@ -62,4 +62,13 @@
         </repository>
     </distributionManagement>
 
+	<dependencies>
+		<!-- spring-boot-starter-data-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 </project>
