refactor(1.0.x): 重构spring-boot-commons-util模块的包结构

--- a/spring-boot-commons-util/pom.xml
+++ b/spring-boot-commons-util/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!-- fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
