--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<groovy-sandbox.version>1.19</groovy-sandbox.version>
 		<caffeine.version>2.9.3</caffeine.version>
 		<guava.version>32.1.3-jre</guava.version>
+		<fastjson.version>1.2.83</fastjson.version>
 		<spring-boot.version>2.0.0.RELEASE</spring-boot.version>
 		<!--============================ plugins version management ========================-->
 		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
@@ -170,6 +171,12 @@
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${guava.version}</version>
+			</dependency>
+			<!-- fastjson -->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
 			</dependency>
 			<!-- spring-boot-autoconfigure -->
 			<dependency>
