--- a/spring-boot-commons-retry/pom.xml
+++ b/spring-boot-commons-retry/pom.xml
@@ -34,7 +34,7 @@
 	<developers>
 		<developer>
 			<name>codeboyzhou</name>
-			<email>imzhouchen@gmail.com</email>
+			<mail>imzhouchen@gmail.com</mail>
 			<organization>Awesome Java Web</organization>
 			<organizationUrl>https://github.com/awesome-java-web</organizationUrl>
 		</developer>
