fix(1.0.x): 修复pom.xml中错误的<mail>标签

--- a/spring-boot-commons-mybatis/pom.xml
+++ b/spring-boot-commons-mybatis/pom.xml
@@ -34,7 +34,7 @@
 	<developers>
 		<developer>
 			<name>codeboyzhou</name>
-			<mail>imzhouchen@gmail.com</mail>
+			<email>imzhouchen@gmail.com</email>
 			<organization>Awesome Java Web</organization>
 			<organizationUrl>https://github.com/awesome-java-web</organizationUrl>
 		</developer>
