--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 	<developers>
 		<developer>
 			<name>codeboyzhou</name>
-			<mail>imzhouchen@gmail.com</mail>
+			<email>imzhouchen@gmail.com</email>
 			<organization>Awesome Java Web</organization>
 			<organizationUrl>https://github.com/awesome-java-web</organizationUrl>
 		</developer>
