--- a/spring-boot-commons-mybatis/pom.xml
+++ b/spring-boot-commons-mybatis/pom.xml
@@ -51,7 +51,6 @@
         <url>https://github.com/awesome-java-web/spring-boot-commons/issues</url>
     </issueManagement>
 
-
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -81,6 +80,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <!-- spring-boot-commons-util -->
+        <dependency>
+            <groupId>io.github.awesome-java-web</groupId>
+            <artifactId>spring-boot-commons-util</artifactId>
         </dependency>
     </dependencies>
 
