--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.organization>awesome-java-web</sonar.organization>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
