--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 
     <modules>
         <module>spring-boot-commons-base</module>
+        <module>spring-boot-commons-data</module>
         <module>spring-boot-commons-scripting</module>
     </modules>
 
