--- a/spring-boot-commons-base/pom.xml
+++ b/spring-boot-commons-base/pom.xml
@@ -59,4 +59,12 @@
         </repository>
     </distributionManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 </project>
