--- a/spring-boot-commons-all/pom.xml
+++ b/spring-boot-commons-all/pom.xml
@@ -9,11 +9,11 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring-boot-commons-base</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>spring-boot-commons-all</artifactId>
+    <packaging>pom</packaging>
 
-    <name>spring-boot-commons-base</name>
-    <description>Spring Boot Commons Base 是一个通用的基础模块，主要包含一些使用频率比较高的常量、枚举类、工具类、公共方法等等</description>
+    <name>spring-boot-commons-all</name>
+    <description>Spring Boot Commons All 主要用来方便一次性引入 spring-boot-commons 项目下的所有依赖</description>
 
     <organization>
         <name>Awesome Java Web</name>
@@ -61,9 +61,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <scope>provided</scope>
+            <groupId>io.github.awesome-java-web</groupId>
+            <artifactId>spring-boot-commons-base</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.awesome-java-web</groupId>
+            <artifactId>spring-boot-commons-data</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.awesome-java-web</groupId>
+            <artifactId>spring-boot-commons-scripting</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
