--- a/spring-boot-commons-all/pom.xml
+++ b/spring-boot-commons-all/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +10,7 @@
     </parent>
 
     <artifactId>spring-boot-commons-all</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>spring-boot-commons-all</name>
     <description>Spring Boot Commons All 主要用来方便一次性引入 spring-boot-commons 项目下的所有依赖</description>
