--- a/spring-boot-commons-base/pom.xml
+++ b/spring-boot-commons-base/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>fastjson</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
