--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <guava.version>33.3.1-jre</guava.version>
         <fastjson.version>1.2.83</fastjson.version>
         <junit5.version>5.10.2</junit5.version>
+        <h2.version>2.2.224</h2.version>
         <!--============================= plugin version numbers ===============================-->
         <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
@@ -185,7 +186,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <!-- suppress UnresolvedMavenProperty for IntelliJ IDEA -->
+                    <!--suppress UnresolvedMavenProperty for IntelliJ IDEA-->
                     <argLine>${jacoco.agent.argLine}</argLine>
                 </configuration>
             </plugin>
@@ -209,6 +210,12 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
