--- a/spring-boot-commons-all/pom.xml
+++ b/spring-boot-commons-all/pom.xml
@@ -102,6 +102,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.github.awesome-java-web</groupId>
+            <artifactId>spring-boot-commons-sftp</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot.version}</version>
