--- a/spring-boot-commons-base/pom.xml
+++ b/spring-boot-commons-base/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>guava</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
