--- a/pom.xml
+++ b/pom.xml
@@ -71,40 +71,55 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!--============================= dependency version numbers ===========================-->
+        <!--==================== maven plugin versions ====================-->
+        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+        <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
+        <sort-dependency-maven-plugin.version>1.1.0</sort-dependency-maven-plugin.version>
+        <!--==================== dependency versions ======================-->
         <commons-codec.version>1.17.1</commons-codec.version>
-        <groovy.version>4.0.6</groovy.version>
-        <groovy-sandbox.version>1.19</groovy-sandbox.version>
-        <mybatis.version>3.5.15</mybatis.version>
-        <guava.version>33.3.1-jre</guava.version>
         <fastjson.version>1.2.83</fastjson.version>
-        <junit5.version>5.10.2</junit5.version>
+        <groovy-sandbox.version>1.19</groovy-sandbox.version>
+        <groovy.version>4.0.6</groovy.version>
+        <guava.version>33.3.1-jre</guava.version>
         <h2.version>2.2.224</h2.version>
         <jsch.version>0.2.21</jsch.version>
-        <sshd-sftp.version>2.14.0</sshd-sftp.version>
+        <junit5.version>5.10.2</junit5.version>
+        <mybatis.version>3.5.15</mybatis.version>
         <slf4j-api.version>2.0.16</slf4j-api.version>
-        <!--============================= plugin version numbers ===============================-->
-        <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
-        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
-        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
-        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
-        <sort-dependency-maven-plugin.version>1.0.0</sort-dependency-maven-plugin.version>
+        <sshd-sftp.version>2.14.0</sshd-sftp.version>
     </properties>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>${maven-source-plugin.version}</version>
+                <groupId>io.github.awesome-java-web</groupId>
+                <artifactId>sort-dependency-maven-plugin</artifactId>
+                <version>${sort-dependency-maven-plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
+                        <phase>clean</phase>
                         <goals>
-                            <goal>jar-no-fork</goal>
+                            <goal>sort-dependencies</goal>
+                            <goal>sort-properties</goal>
+                            <goal>sort-plugins</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${maven-gpg-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>sign</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -124,40 +139,41 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>${nexus-staging-maven-plugin.version}</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>${maven-gpg-plugin.version}</version>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>sign-artifacts</id>
-                        <phase>deploy</phase>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
                         <goals>
-                            <goal>sign</goal>
+                            <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>io.github.awesome-java-web</groupId>
-                <artifactId>sort-dependency-maven-plugin</artifactId>
-                <version>${sort-dependency-maven-plugin.version}</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <!--suppress UnresolvedMavenProperty for IntelliJ IDEA-->
+                    <argLine>${jacoco.agent.argLine}</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
                 <executions>
                     <execution>
+                        <id>pre-unit-test</id>
                         <goals>
-                            <goal>sort-dependencies</goal>
+                            <goal>prepare-agent</goal>
                         </goals>
-                        <phase>clean</phase>
+                        <configuration>
+                            <propertyName>jacoco.agent.argLine</propertyName>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -186,29 +202,15 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${nexus-staging-maven-plugin.version}</version>
+                <extensions>true</extensions>
                 <configuration>
-                    <!--suppress UnresolvedMavenProperty for IntelliJ IDEA-->
-                    <argLine>${jacoco.agent.argLine}</argLine>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>pre-unit-test</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <propertyName>jacoco.agent.argLine</propertyName>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
