--- a/spring-boot-commons-all/pom.xml
+++ b/spring-boot-commons-all/pom.xml
@@ -60,6 +60,7 @@
     </distributionManagement>
 
     <properties>
+        <!--==================== dependency versions ======================-->
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     </properties>
 
