--- a/spring-boot-commons-data/pom.xml
+++ b/spring-boot-commons-data/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.awesome-java-web</groupId>
         <artifactId>spring-boot-commons</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>spring-boot-commons-data</artifactId>
